added contact form and plugins

--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -2,7 +2,7 @@
 Footer
 --------------------------------------------------------------*/
 .site-footer {
-  margin-top: 96px;
+  margin-top: 0;
   padding: 60px 0 84px;
   background-color: map-get($colors, 'dark');
   color: map-get($colors, 'white');
