--- a/src/sass/inc/layout.scss
+++ b/src/sass/inc/layout.scss
@@ -87,7 +87,8 @@ $grid-width: $container-width/$grid-columns;
 
 .wp-block-vivipost-full-width,
 .align-full {
-	margin: 32px calc(50% - 50vw);
+	margin-left: calc(50% - 50vw);
+	margin-right: calc(50% - 50vw);
 	max-width: 100vw;
 	width: 100vw;
 }
@@ -130,5 +131,17 @@ $grid-width: $container-width/$grid-columns;
     -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
     -ms-transform: rotate(180deg); /* IE 9 */
     transform: rotate(180deg);
+  }
+}
+
+.entry-footer {
+  @extend .align-full;
+  background-color: map-get($colors, 'dark');
+  padding: 1em 0;
+  .edit-link {
+    @extend .container;
+  }
+  .post-edit-link {
+    color: map-get($colors, 'yellow');
   }
 }
